# roshelm_ws

./: .gitignore
devel/: .catkin  local_setup.sh  setup.sh
devel/include/behavior_manager/: DepthBehaviorAction.h  DepthBehaviorActionFeedback.h  DepthBehaviorActionGoal.h  DepthBehaviorActionResult.h  DepthBehaviorFeedback.h  DepthBehaviorGoal.h  DepthBehaviorResult.h
devel/include/common_msgs/: Float64Stamped.h
devel/lib/auh_controller_pid/: PIDcontroller
devel/lib/auh_thrust_manager/: thrust_manager
devel/lib/controller_manager/: controller_manager_node
devel/lib/pkgconfig/: auh_controller_pid.pc  auh_launch.pc  auh_thrust_manager.pc  behavior_manager.pc  common_msgs.pc  common_tools.pc  controller_manager.pc  ros_moos_bridge.pc  variable_extractor.pc
devel/lib/ros_moos_bridge/: bridge_node
devel/lib/variable_extractor/: variable_extractor_node
src/: CMakeLists.txt
src/auh_control/: CMakeLists.txt  package.xml
src/auh_control/config/: TAM.yaml  inertial.yaml  model_params.yaml  pos_pid_control.yaml  thruster_manager.yaml  vel_pid_control.yaml
src/auh_control/launch/: auh_pid_controller.launch  auh_position_hold.launch  start_pid_controller.launch  start_thruster_manager.launch  start_velocity_control.launch
src/auh_control/scripts/: auh_thrusts.py
src/auh_controller_pid/: CMakeLists.txt  package.xml
src/auh_description/: CMakeLists.txt  package.xml
src/auh_description/urdf/: base.xacro  (+4 more)
src/auh_launch/: CMakeLists.txt  package.xml
src/auh_thrust_manager/: CMakeLists.txt  package.xml
src/behavior_manager/: CMakeLists.txt  package.xml
src/common_msgs/: CMakeLists.txt
src/common_tools/: CMakeLists.txt
src/controller_manager/: CMakeLists.txt
src/controller_manager/config/: controllers.yaml
src/controller_manager/include/controller_manager/: ControllerBase.hpp  ControllerManager.hpp  ControllerTools.hpp  PIDController.hpp  RosCompat.hpp
src/controller_manager/launch/: test.launch
src/controller_manager/plugin/: controller_plugins.xml
src/controller_manager/src/: controller_manager.cpp  controller_manager_node.cpp  pid_controller.cpp
src/docking_nav/: CMakeLists.txt  README.md  package.xml
src/docking_optical_msgs/: CMakeLists.txt  package.xml
src/docking_optical_vision/: CMakeLists.txt  package.xml
src/ros_helm/: CMakeLists.txt  README.md  package.xml
src/ros_helm/config/helm/: alpha.bhv  alpha.moos  bravo.bhv  depth.bhv  docking.bhv  docking_startHelm.yaml  registerVariables.yaml  startHelm.yaml
src/ros_helm/config/ros/: params.yaml
src/ros_helm/log/: DESIRED_HEADING.txt  DESIRED_SPEED.txt  NAV_DEPTH.txt  NAV_HEADING.txt  NAV_SPEED.txt  NAV_X.txt  NAV_Y.txt
src/ros_helm/log/2025_12_17_03_58_log/: DESIRED_HEADING.txt  DESIRED_SPEED.txt  NAV_DEPTH.txt  NAV_HEADING.txt  NAV_SPEED.txt  NAV_X.txt  NAV_Y.txt
src/ros_helm/log/2025_12_17_04_23_log/: DESIRED_HEADING.txt  DESIRED_SPEED.txt  NAV_DEPTH.txt  NAV_HEADING.txt  NAV_SPEED.txt  NAV_X.txt  NAV_Y.txt
src/ros_helm/src/: README.md
src/ros_helm/src/helm/config/: registerVariables.yaml
src/ros_helm/src/helm/include/: HelmApp.h  HelmCheck.h  HelmIvP.h  HelmMsg.h
src/ros_helm/src/helm/src/: CMakeLists.txt  HelmApp.cpp  HelmCheck.cpp  HelmIvP.cpp  main.cpp
src/ros_helm/src/helm/test/: CMakeLists.txt  test_helm.cpp  test_ivp.cpp  test_zaic.cpp
src/ros_helm/src/helm/tools/: ContactLedger.cpp  ContactLedger.h  HelmException.h  HelmGeodesy.cpp  HelmGeodesy.h  HelmLock.h  HelmMsg.cpp  HelmPlaybackStatus.h  HelmUtilityFunctions.cpp  HelmUtilityFunctions.h  Notify.h
src/ros_helm/src/ivp/: CHANGES_STANDALONE.md  setCurrTime
src/ros_helm/src/ivp/src/: CMakeLists.txt
src/ros_helm/src/ivp/src/app_alogeval/: CMakeLists.txt
src/ros_helm/src/ivp/src/app_alogpick/: CMakeLists.txt
src/ros_helm/src/ivp/src/app_bhv2graphviz/: CMakeLists.txt
src/ros_helm/src/ivp/src/app_manifest_test/: CMakeLists.txt
src/ros_helm/src/ivp/src/lib_behaviors/: CMakeLists.txt
src/ros_helm/src/ivp/src/lib_behaviors-marine/: CMakeLists.txt
src/ros_helm/src/ivp/src/lib_bhvutil/: CMakeLists.txt
src/ros_helm/src/ivp/src/lib_geometry/: CMakeLists.txt  CurrentField.h
src/ros_helm/src/ivp/src/lib_helmivp/: CMakeLists.txt
src/ros_helm/src/ivp/src/lib_ivpbuild/: CMakeLists.txt
src/ros_helm/src/ivp/src/lib_ivpsolve/: CMakeLists.txt
src/ros_helm/src/ivp/src/lib_mbutil/: CMakeLists.txt
src/ros_helm/src/ivp/src/lib_realm/: CMakeLists.txt  InfoCastSettings.cpp  InfoCastSettings.h
src/ros_helm/src/ivp/src/lib_turngeo/: CMakeLists.txt
src/ros_helm/src/ros/: CMakeLists.txt
src/ros_helm/src/ros/config/: params.yaml
src/ros_helm/src/ros/include/: HelmVariableInjector.h  RosBridge.h  RosCommandPublisher.h  RosConfigLoader.h  RosNavPublisher.h
src/ros_helm/src/ros/launch/: helm_node.launch
src/ros_helm/src/ros/log/: ros_helm_20260116_091315.txt  ros_helm_20260116_093236.txt  ros_helm_20260116_093423.txt  ros_helm_20260116_093801.txt  ros_helm_20260116_094115.txt  ros_helm_20260116_101317.txt  ros_helm_20260116_101720.txt  ros_helm_20260116_102016.txt  ros_helm_20260116_102337.txt  ros_helm_20260116_104408.txt  ros_helm_20260116_113914.txt  ros_helm_20260116_114420.txt  ros_helm_20260116_115030.txt  ros_helm_20260116_115920.txt  ros_helm_20260116_125801.txt
src/ros_helm/src/ros/src/: HelmVariableInjector.cpp  RosBridge.cpp  RosCommandPublisher.cpp  RosConfigLoader.cpp  RosNavPublish.cpp  RosNavPublisher.cpp  ros_node_main.cpp
src/ros_moos_bridge/: CMakeLists.txt
src/ros_moos_bridge/config/: bridge_config.yaml  test.moos
src/ros_moos_bridge/include/ros_moos_bridge/: RosMoosBridge.h
src/ros_moos_bridge/launch/: ros_moos_simulator.launch  test.launch
src/ros_moos_bridge/src/: RosMoosBridge.cpp  bridge_node.cpp
src/sds_description/: CMakeLists.txt  package.xml
src/variable_extractor/: CMakeLists.txt  package.xml
src/variable_extractor/include/variable_extractor/: DefaultVariableExtractor.hpp  VariableExtractorInterface.hpp
src/variable_extractor/plugin/: variable_extractor_plugins.xml
src/variable_extractor/src/: variable_extractor.cpp  variable_extractor_node.cpp
(+170 files in other folders)
