<?xml version="1.0"?>
<package format="2">
  <name>ros_helm</name>
  <version>0.1.0</version>
  <description>
    ROS wrapper for MOOS-IvP Helm (ros-helm)
  </description>

  <maintainer email="your@email.com">Shark947</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
